# Machine-Learning-Column

./: .gitignore  0-DataProcess.py  1-CART.py  10-NetworkX.py  12-rForest.py  13-CART_C.py  2-GBDT.py  3-XGBoost.py  4.46.0  5-crf_by_torch.py  7-w2v_by_gensim.py  8-deep_walk.py  README.md  main.py  settings_vscode.json
.spyproject/: workspace.ini
AgentScope/: demo_1.ipynb  demo_1_agent.py  demo_2.ipynb  demo_2_tools.py  demo_3_rag.py  demo_4_stable.ipynb  demo_4_stable.py
AgentScope2/: demo_1_base.py  demo_2_conversation_for_chat.py  demo_3_conversation_for_multi.py
EvalScope/: README.md  test.py
LangChain/: 1_1_llm.py  2_1_doc_loaders.py  2_3_text_embedding_models.py  2_4_vector_stores.py  2_6_indexing.py  3_1_memory.py  demo_1.py  demo_sqlcoder.py
ML/: 1-CART_R.py  10-n2v_by_api.py  11-iForest.py  2-GBDT.py  4-crf_by_hand.py  6-w2v_by_hand.py  9-n2v_by_hand.py  __init__.py
RL/: 1_dp.py  2_dp.py  3_td_all.py  4_td_sarsa.py  5_td_qlearning.py  6_pg_ppo.py  demo_1.py  demo_2.py  demo_3.py
SQLCoder/: 7b_2.py  __init__.py
ai-mcp/: README.md  config.json  config_sample.json  main.py  pyproject.toml  run_pdf_file.py  run_sys_info.py  tools.py  tools_bilibili.py  tools_pdf_file.py
attention_is_all_you_need/: add_norm.py  bert_encoder.py  decoder_block.py  encoder_block.py  encoder_decoder.py  masked_language_modeling.py  multi_head_attention.py  position_encoding.py  position_wise_ffn.py  run_bert_finetune.py  run_bert_pretrain.py  transformer_decoder.py  transformer_encoder.py
crewai/: demo_1.ipynb
explore_on_llm/: README.md  demo_1_inference_api.ipynb  (+21 more)
(+171 files in other folders)
